# pr0bot

./: .gitignore  README.md  config_example.yaml  pyproject.toml
bot/: __init__.py  __main__.py
bot/helpers/mongo_db/: mongo_service.py
bot/helpers/search/: search_service.py
